--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta property="og:title" content="Outreach for WDD231">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://paulcheney.github.io/wdd231-outreach">
-    <meta property="og:image" content="https://paulcheney.github.io/wdd231-outreach/images/og-image.jpg">
+  <meta property="og:description" content="Instructor outreach for WDD231 offerd by BYUI.">
+  <meta property="og:url" content="https://paulcheney.github.io/wdd231-outreach">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:image" content="https://paulcheney.github.io/wdd231-outreach/images/og-image.jpg" />
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="WDD231 Outreach">
 
 </head>
 
@@ -42,18 +45,18 @@
 
     <!-- ************************ Before Term Starts ***************************** -->
     <details id="week01start">
-      <summary>Before Term Starts - Setup Class <time class="date-2a"></time></summary>
+      <summary>Before Term Starts - Setup Class <time class="date-3a"></time></summary>
 
 
       <section class="canvas">
         <button class="wk0a"></button>
-        <p>On <time class="date-2b"></time> before class begins, modify the following message and then email it to all
+        <p>On <time class="date-3b"></time> before class begins, modify the following message and then email it to all
           students using Canvas
           Inbox</p>
         <div>
           <p><b>SUBJECT:</b> Welcome to WDD231, the best class ever!</p>
           <p>What a fantastic opportunity to work with students from around the world who share a common faith.</p>
-          <p>Class begins on <time class="date1a"></time>, and we must hit the ground running.</p>
+          <p>Class begins on <time class="date0a"></time>, and we must hit the ground running.</p>
           <p>You should have completed WDD130 & WDD131 <strong>before</strong> enrolling in this course. </p>
           <p>Canvas should be open now if you want to get started early. No Pressure here.😃</p>
           <p>You need to dedicate many hours per week to master these concepts. If you don't have that kind of time, you may want to take the class later when you can devote enough time to be successful.</p>
@@ -76,7 +79,7 @@
 
       <section class="canvas">
         <button class="wk0b"></button>
-        <p>On <time class="date-2c"></time> before class begins, post your version of the following message to Canvas
+        <p>On <time class="date-3c"></time> before class begins, post your version of the following message to Canvas
           Announcements</p>
         <div>
           <p><b>SUBJECT:</b> Welcome to Class</p>
@@ -396,11 +399,11 @@
 
     <!-- ************************ Week One ***************************** -->
     <details id="week01start">
-      <summary>Week 1 <time class="date1b"></time></summary>
+      <summary>Week 1 <time class="date0b"></time></summary>
 
       <section class="teams">
         <button class="wk1a"></button>
-        <p>On <time class="date1c"></time> post the following Teams Announcement to the "General Questions -
+        <p>On <time class="date0c"></time> post the following Teams Announcement to the "General Questions -
           Week 1" discussion.</p>
         <div>
           <p><b>SUBJECT:</b> Week 1: Group Work</p>
@@ -415,7 +418,7 @@
 
       <section class="canvas">
         <button class="wk1b"></button>
-        <p><b>Slow Starting:</b> On <time class="date5a"></time>, open Canvas then the "People" tab on the left side. Choose the "WDD231Teams" Tab. From the three dots, select "Message all unasigned Students" and send a personalized version of the following message.
+        <p><b>Slow Starting:</b> On <time class="date4a"></time>, open Canvas then the "People" tab on the left side. Choose the "WDD231Teams" Tab. From the three dots, select "Message all unasigned Students" and send a personalized version of the following message.
           <img src="images/nogroup.png">
         </p>
         
@@ -431,7 +434,7 @@
 
       <section class="canvas">
         <button class="wk1c"></button>
-        <p><b>No Submission for Course Home Page:</b> On <time class="date5b"></time> open Canvas, choose
+        <p><b>No Submission for Course Home Page:</b> On <time class="date4b"></time> open Canvas, choose
           Grades and select "W01 Activity: Course Home Page" assignment. Choose "Message Students Who" > Have not yet
           submitted. Send a personalized version of the following message.</p>
         <div>
@@ -452,13 +455,13 @@
 
       <section class="canvas">
         <button class="wk1d"></button>
-        <p><b>Non-participating Students:</b> On <time class="date6a"></time>, message students who have not
+        <p><b>Non-participating Students:</b> On <time class="date5a"></time>, message students who have not
           yet submitted the "W01 Setup: Tools". Inform them that this is a 7-week course, and remind them
           of the upcoming registration deadline. Send a personalized version of the following message.</p>
         <div>
           <p><b>SUBJECT:</b> Checking In</p>
           <p>I noticed you haven't turned in the first assignment. This course is only seven weeks long and ends on
-            <time class="date48z"></time>. To succeed in this block, it will be important for you to get started as
+            <time class="date47z"></time>. To succeed in this block, it will be important for you to get started as
             soon as you can. Is there something that might be keeping you from getting started in this class? Please
             email me so we can work together to help you have a successful experience.
           </p>
@@ -475,7 +478,7 @@
         <button class="wk1r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=1&amp;CMG=1&amp;CourseCode=WDD%20231">Report
-            your week 1 outreach</a> by midnight on <time class="date6"></time></p>
+            your week 1 outreach</a> by midnight on <time class="date5b"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end week 1 -->
@@ -894,6 +897,7 @@
   </footer>
 
   <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
