--- a/index.html
+++ b/index.html
@@ -795,6 +795,15 @@
         </div>
       </section> <!-- End of this section -->
 
+      <section class="teams">
+        <button class="wk6d"></button>
+        <p>On <time class="date36a"></time> post this announcement to Teams</p>
+        <div>
+          <p><b>SUBJECT:</b> Final Project and Audit Report</p>
+          <p>The new final project needs to be three pages as the audit tool is built to handle three pages. Make sure to watch for any HTML errors or CSS errors as they will show up on the audit report. <br>The audit report for week 6 requires a <strong>full URL</strong> to your final project folder. Previous assignments only required a GitHub account. Please use the audit report assist you in completing many of the criteria. </p>
+        </div>
+      </section> <!-- End of this section -->
+
       <section class="canvas">
         <button class="wk6b"></button>
         <p><b>Late Work:</b> On <time class="date36c"></time> select the <b>W05 Assignment: Chamber Discover Page</b> in the gradebook and
@@ -809,6 +818,7 @@
             Bro/Sister Smith</p>
         </div>
       </section> <!-- End of this section -->
+
 
       <section class="canvas">
         <button class="wk6c"></button>
