--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <p>Post a message in Teams</p>
         <div>
           <p>Post a message NOT to use the "General Channel".</p>
-          <p>SUBJECT: Do Not Post Here <br>Please use Teams "Channels" to ask and answer questions about each assignment. We have a separate channel for each assignment to make it easier to post questions and find answers.
-            Please don't post to this General Channel.</p>
+          <p>SUBJECT: Use "General Questions" channels <br>
+            General Questions week 1-6<br>Please use Teams General Questions- Week 1-6 Channels to ask and answer questions about each assignment. I have created a separate channel for each weeks class discussions to make it easier to...<br>post questions<br>get help from classmates<br>find answers<br>Please do not post to this general channel.</p>
           <img src="images/teams-message.webp">
         </div>
       </section> <!-- End of this section -->
