--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
           <img src="images/teams-integrations.webp">
 
           <h3>Sort the Canvas Gradebook</h3>
-          <p>While your waiting, sort the Canvas gradebok, it makes finding the current assignent much easier. Open your
-            course in Canvas and choose the "Grades". Select the gear in the upper right corner.</p>
+          <p>While your waiting, sort the Canvas gradebok, it makes finding the current assignent much easier. Open your course in Canvas and choose the "Grades". Select the gear in the upper right corner.</p>
           <img src="images/sort-gradebook.webp">
+          <h3>Publish Your Canvas Course</h3>
+          <p>Actually, your course will be published automatically on Friday at  11:59 UTC (5:00pm MT)</p>
           <h3>Activate your class in MS Teams</h3>
           <p>Once the sync process has finished, you will have a new Teams for your new class. You need to activate the
             class
@@ -219,6 +220,8 @@
             Please take responsibility for managing this time difference. This tool may be helpful. https://www.worldtimebuddy.com</p>
         </div>
       </section> <!-- End of this section -->
+
+      
 
       <section class="report">
         <button class="wk0h"></button>
