--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
 
       <section class="canvas">
         <button class="wk0a"></button>
-        <p>Your Canvas xcourse must be published before this step can be done. Your course will be automatically published at 5:00pm MST (11:59 UTC)</p>
         <p>On <time class="date-3b"></time> before class begins, modify the following message and then email it to all
           students using Canvas
           Inbox</p>
         <div>
+          <h3>Your Canvas course must be published before this step can be done. Your course will be automatically published at 5:00pm MST (11:59 UTC)</h3>
           <p><b>SUBJECT:</b> Welcome to WDD231, the best class ever!</p>
           <p>What a fantastic opportunity to work with students from around the world who share a common faith.</p>
           <p>Class begins on <time class="date0a"></time>, and we must hit the ground running.</p>
