--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section> <!-- End of this section -->
 
-      <section class="task">
+      <section class="canvas">
         <button class="wk0c"></button>
         <p>Change the Canvas Information.</p>
         <div>
@@ -89,7 +89,7 @@
 
       <section class="task">
         <button class="wk0d"></button>
-        <p>Connect Teams and Canvas</p>
+        <p>Connect Canvas to MS Teams</p>
         <div>
           <p>Open Canvas, select settings, click the "Intergrations" tab and activate Microsoft Sync. Click the "Sync
             Now"
@@ -115,18 +115,15 @@
 
       <section class="teams">
         <button class="wk0e"></button>
-        <p>Post a message in Teams</p>
+        <p>Rename the "General" channel to "General Questions - Week 1"</p>
         <div>
-          <p>Post a message NOT to use the "General Channel".</p>
-          <p>SUBJECT: Use "General Questions" channels <br>
-            General Questions week 1-6<br>Please use Teams General Questions- Week 1-6 Channels to ask and answer questions about each assignment. I have created a separate channel for each weeks class discussions to make it easier to...<br>post questions<br>get help from classmates<br>find answers<br>Please do not post to this general channel.</p>
-          <img src="images/teams-message.webp">
+          <img src="images/teams-general.webp">
         </div>
       </section> <!-- End of this section -->
 
 
 
-      <section class="task">
+      <section class="teams">
         <button class="wk0f"></button>
         <p>Change the Teams Information.</p>
         <div>
@@ -156,11 +153,11 @@
 
 
 
-      <section class="task">
+      <section class="teams">
         <button class="wk0g"></button>
         <p>Add Five standard MS Teams channels for the weekly discussions</p>
         <div>
-          <p>Add a class channel for each week for class discussions "General Questions - Week 1" etc.</p>
+          <p>Add a class channel for each week for class discussions "General Questions - Week 2" etc.</p>
           <img src="images/channels-general.webp">
           <p>Select "Standard" channel</p>
           <img src="images/teams-standard.webp">
