--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           <p><b>SUBJECT:</b> Week 2: Looking forward to this module.</p>
           <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume.<br>
             Remember that frameworks are not allowed in this course.<br>            
-            As you encoiunter questions on this weeks assignment or you would like to show your work for feedback, please post it here. 😀</p>
+            As you encounter questions on this weeks assignment or you would like to show your work for feedback, please post it here. 😀</p>
         </div>
       </section> <!-- End of this section -->
 
