--- a/index.html
+++ b/index.html
@@ -545,6 +545,22 @@
         </div>
       </section> <!-- End of this section -->
 
+
+      <section class="teams">
+        <button class="wk2f"></button>
+        <p>On <time class="date9b"></time> post the following question in MS Teams for this week to prompt conversation.</p>
+    <div>
+          <p>Why would you need a full URL path to the og:image used in the head tag of your web page? Share your ideas with the class here.</p>
+	</div>
+</section> <!-- End of this section -->
+
+
+
+
+
+
+
+
       <section class="canvas">
         <button class="wk2b"></button>
         <p><b>Group of One Problem</b> On <time class="date11a"></time> go to Canvas and review the People >
