--- a/index.html
+++ b/index.html
@@ -586,6 +586,13 @@
 
     </details><!-- end of week 2 -->
 
+
+
+
+
+
+
+
     <!-- ************************ Week Three ***************************** -->
     <details id="week03start">
       <summary>Week 3 <time class="date14a"></time></summary>
@@ -600,6 +607,27 @@
             them in the appropriate weekly discussion channel of MS Teams.</p>
         </div>
       </section> <!-- End of this section -->
+
+
+
+
+
+      <section class="teams">
+        <button class="wk3g"></button>
+        <p>On <time class="date14c"></time> post this announcement to Teams</p>
+        <div>
+          <p><b>SUBJECT:</b> Elder Bednar Thoughts on Education</p>
+          <p>Education is the key to growth and opportunity.<br>
+You can learn how to take tests and you can get great grades and be totally uneducated.<br>
+The goal is to learn to love learning so when you have no idea about what to do you can figure out what to do.<br> -<a href="https://www.youtube.com/watch?v=mpm3O1raENw" target="_blank">Interview Silicon Slopes</a> 2023<br><br><strong>How could this apply to you and your experience at Pathways?</strong></p>
+        </div>
+      </section> <!-- End of this section -->
+
+
+
+
+
+
 
       <section class="canvas">
         <button class="wk3b"></button>
