--- a/index.html
+++ b/index.html
@@ -414,6 +414,25 @@
         </div>
       </section> <!-- End of this section -->
 
+      <section class="teams">
+        <button class="wk1p"></button>
+        <p>On <time class="date2a"></time> post the following Teams Announcement to the "General Questions -
+          Week 1" discussion.</p>
+        <div>
+          <p><b>SUBJECT:</b> Interview Practice</p>
+          <p>This is the last class in this certificate, and you should have the skills to get an internship or entry level job which means you need to showcase your best work. Each week, I will post a sample website and see if you can identify the design problems that may prevent this student from getting an internship. So here is the first one. </p>
+          <p>Pretend that you are an employer interviewing two students for an internship and you saw these footers in their portfolio. </p>
+          <ul>
+          	<li>What feedback would you provide to student 1?</li>
+          	<li>What feedback would you provide to student 2?</li>
+          </ul>
+          <p>Reply to share your thoughts.</p>
+          <img src="images/portfolio1.webp">
+        </div>
+      </section> <!-- End of this section -->
+      
+
+
 
       <section class="canvas">
         <button class="wk1b"></button>
@@ -557,7 +576,20 @@
 
 
 
-
+<section class="teams">
+  <button class="wk2p"></button>
+  <p>On <time class="date9c"></time> post this announcement to Teams</p>
+  <div>
+    <p><b>SUBJECT:</b> Interview Practice</p>
+    <p>Pretend that you are an employer interviewing two students for an internship and you they showed these headers in their portfolio. </p>
+    <ul>
+      <li>What feedback would you provide to student 1?</li>
+      <li>What feedback would you provide to student 2?</li>
+    </ul>
+    <p>Reply to share your thoughts.</p>
+    <img src="images/portfolio2.webp">
+  </div>
+</section> <!-- End of this section -->
 
 
 
@@ -575,6 +607,10 @@
             Bro/Sister Smith</p>
         </div>
       </section> <!-- End of this section -->
+
+
+
+      
 
 
       <section class="report">
@@ -642,6 +678,27 @@ The goal is to learn to love learning so when you have no idea about what to do 
             Bro/Sister Smith</p>
         </div>
       </section> <!-- End of this section -->
+
+
+      <section class="teams">
+        <button class="wk3p"></button>
+        <p>On <time class="date16a"></time> post this announcement to Teams</p>
+        <div>
+          <p><b>SUBJECT:</b> Interview Practice</p>
+          <p>What opportunities for improvement do you see in this chamber home page? </p>
+
+          <p>Reply to share your thoughts.</p>
+          <img src="images/portfolio3.webp">
+        </div>
+      </section> <!-- End of this section -->
+
+
+
+
+
+
+
+
 
       <section class="canvas">
         <button class="wk3c"></button>
@@ -737,6 +794,19 @@ The goal is to learn to love learning so when you have no idea about what to do 
         </div>
       </section> <!-- End of this section -->
 
+      <section class="teams">
+        <button class="wk4p"></button>
+        <p>On <time class="date23a"></time> post this announcement to Teams</p>
+        <div>
+          <p><b>SUBJECT:</b> Interview Practice</p>
+          <p>If you were interviewing a student who submitted this example, what feedback would you provide?</p>
+
+          <p>Reply to share your thoughts.</p>
+          <img src="images/portfolio4.webp">
+        </div>
+      </section> <!-- End of this section -->
+
+
       <section class="canvas">
         <button class="wk4c"></button>
         <p><b>Positive Outreach:</b> On <time class="date25a"></time> identify students who scored more than
@@ -784,6 +854,10 @@ The goal is to learn to love learning so when you have no idea about what to do 
         </div>
       </section> <!-- End of this section -->
 
+
+ 
+
+
       <section class="canvas">
         <button class="wk5b"></button>
         <p><b>Late Work: </b>On <time class="date29c"></time> select the <b>W04 Assignment: Chamber Join
@@ -795,6 +869,17 @@ The goal is to learn to love learning so when you have no idea about what to do 
             know, you can still turn it in but we are getting close to the end of the semester.<br>
             Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this week?<br>
             Bro/Sister Smith</p>
+        </div>
+      </section> <!-- End of this section -->
+
+      <section class="teams">
+        <button class="wk5p"></button>
+        <p>On <time class="date30a"></time> post this announcement to Teams</p>
+        <div>
+          <p><b>SUBJECT:</b> Interview Practice</p>
+          <p>If you were interviewing a student who submitted this example, what feedback would you provide?</p>
+          <p>Reply to share your thoughts.</p>
+          <img src="images/portfolio5.webp">
         </div>
       </section> <!-- End of this section -->
 
