--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <section class="teams">
         <button class="wk0i"></button>
-        <p>Post a message in "General Questions Week 1" Channel</p>
+        <p>Post a message in Teams</p>
         <div>
           <p>Post a message about UCT.</p>
           <p>SUBJECT: Universal Coordinated Time Offset <br>As a worldwide church, we are no longer using MT as the standard for due dates and team meetings. Instead, all due dates are now set to UCT. Please take a minute to find the offset from where you live. Assignments and team meetings could be EARLIER than listed time as much as 11 hours, or they could be later. 😁
@@ -402,8 +402,7 @@
 
       <section class="teams">
         <button class="wk1a"></button>
-        <p>On <time class="date0c"></time> post the following Teams Announcement to the "General Questions -
-          Week 1" discussion.</p>
+        <p>On <time class="date0c"></time> post the following Teams Announcement</p>
         <div>
           <p><b>SUBJECT:</b> Week 1: Group Work</p>
           <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself
@@ -416,8 +415,7 @@
 
       <section class="teams">
         <button class="wk1p"></button>
-        <p>On <time class="date2a"></time> post the following Teams Announcement to the "General Questions -
-          Week 1" discussion.</p>
+        <p>On <time class="date2a"></time> post the following Teams Announcement</p>
         <div>
           <p><b>SUBJECT:</b> Interview Practice</p>
           <p>This is the last class in this certificate, and you should have the skills to get an internship or entry level job which means you need to showcase your best work. Each week, I will post a sample website and see if you can identify the design problems that may prevent this student from getting an internship. So here is the first one. </p>
