--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             to your new group of friends.</p>
           <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building
             your course portal home page. You could share your page link with the other members of your group. If you
-            have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
+            have any questions or want to show your work, please post below. 😎</p>
         </div>
       </section> <!-- End of this section -->
 
@@ -637,8 +637,9 @@
         <div>
           <p><b>SUBJECT:</b> Week 3: Playing with the Big Boys Now</p>
           <p>This week you get to interact with a professional level weather API and report dynamic data on your very
-            own website. Another really great skill for your portfolio toolbox. If you have any questions, please post
-            them in the appropriate weekly discussion channel of MS Teams.</p>
+            own website. Another really great skill for your portfolio toolbox. <br>
+            You may recieve a message from GitHub that your key is exposed. Later we will learn how to handle this. Once the term is over, you can delete it. 
+            <br>When you have any questions, please post them below. 😎</p>
         </div>
       </section> <!-- End of this section -->
 
@@ -765,6 +766,14 @@ The goal is to learn to love learning so when you have no idea about what to do 
 
 
 
+
+
+
+
+
+
+
+
     <!-- ************************ Week Four ***************************** -->
     <details id="week04start">
       <summary>Week 4 <time class="date21a"></time></summary>
@@ -774,7 +783,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
         <p>On <time class="date21b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 4: More tools for your toolbox</p>
-          <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dynamically creating these modals using JavaScript. Before you go, we also have an enhancement to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
+          <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dynamically creating these modals using JavaScript. Before you go, we also have an enhancement to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 <br>When you have questions, please post them here so we can all help each other out.</p>
         </div>
       </section> <!-- End of this section -->
 
@@ -846,9 +855,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
           <p><b>SUBJECT:</b> Week 5: Finishing up the Chamber Site</p>
           <p>We're getting close to the end so hang on and keep taking your vitamin pills. This week you get to build a
             new page for your chamber web site that allows people to discover your home town. So be proud of your town
-            and show us some cool things about where you live. If you have any questions, please post them in the
-            appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the
-            appropriate weekly discussion channel of MS Teams.</p>
+            and show us some cool things about where you live. <br>When you have any questions, please post them below. </p>
         </div>
       </section> <!-- End of this section -->
 
