--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
           	<li>What feedback would you provide to student 2?</li>
           </ul>
           <p>Reply to share your thoughts.</p>
-          <img src="images/portfolio1.webp">
+          <a href="images/portfolio1.webp" download>Download the image to share on Teams</a>
         </div>
       </section> <!-- End of this section -->
       
@@ -585,7 +585,7 @@
       <li>What feedback would you provide to student 2?</li>
     </ul>
     <p>Reply to share your thoughts.</p>
-    <img src="images/portfolio2.webp">
+    <a href="images/portfolio2.webp" download>Download the image to share on Teams</a>
   </div>
 </section> <!-- End of this section -->
 
@@ -687,7 +687,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
           <p>What opportunities for improvement do you see in this chamber home page? </p>
 
           <p>Reply to share your thoughts.</p>
-          <img src="images/portfolio3.webp">
+          <a href="images/portfolio3.webp" download>Download the image to share on Teams</a>
         </div>
       </section> <!-- End of this section -->
 
@@ -809,7 +809,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
           <p>If you were interviewing a student who submitted this example, what feedback would you provide?</p>
 
           <p>Reply to share your thoughts.</p>
-          <img src="images/portfolio4.webp">
+          <a href="images/portfolio4.webp" download>Download the image to share on Teams</a>
         </div>
       </section> <!-- End of this section -->
 
@@ -884,7 +884,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
           <p><b>SUBJECT:</b> Interview Practice</p>
           <p>If you were interviewing a student who submitted this example, what feedback would you provide?</p>
           <p>Reply to share your thoughts.</p>
-          <img src="images/portfolio5.webp">
+          <a href="images/portfolio5.webp" download>Download the image to share on Teams</a>
         </div>
       </section> <!-- End of this section -->
 
