--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             your course portal home page. You could share your page link with the other members of your group. If you
             have any questions or want to show your work, please post below. 😎</p>
         </div>
-      </section> <!-- End of this section -->
+      </section> <!-- End of this section -->W03 Assignment: Chamber Home Page
 
       <section class="teams">
         <button class="wk1p"></button>
@@ -817,7 +817,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
       <section class="canvas">
         <button class="wk4c"></button>
         <p><b>Positive Outreach:</b> On <time class="date25a"></time> identify students who scored more than
-          16/20 on <b>W03 Assignment: Chamber Home Page</b> and send them a message congratulating them on their work.
+          24/30 on <b>W03 Assignment: Chamber Home Page</b> and send them a message congratulating them on their work.
         </p>
         <div>
           <p><b>SUBJECT:</b> Congratulations on your Chamber home page</p>
