--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <p>What a fantastic opportunity to work with students from around the world who share a common faith.</p>
           <p>Class begins on <time class="date0a"></time>, and we must hit the ground running.</p>
           <p>You should have completed WDD130 & WDD131 <strong>before</strong> enrolling in this course. </p>
-          <p>Canvas should be open now if you want to get started early. No Pressure here.😃</p>
+          <p>Canvas should be open by Friday at 5:00pm MST, if you want to get started early. No Pressure here.😃</p>
           <p>You need to dedicate many hours per week to master these concepts. If you don't have that kind of time, you may want to take the class later when you can devote enough time to be successful.</p>
           <p>You will be using VS Code to create all your assignments and then hosting them on GitHub. Both are tools
             used by professionals in the field. </p>
