--- a/index.html
+++ b/index.html
@@ -950,6 +950,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
         <div>
           <p><b>SUBJECT:</b> Final Project and Audit Report</p>
           <p>The new final project needs to be three pages as the audit tool is built to handle three pages. Make sure to watch for any HTML errors or CSS errors as they will show up on the audit report. <br>The audit report for week 6 requires a <strong>full URL</strong> to your final project folder. Previous assignments only required a GitHub account. Please use the audit report assist you in completing many of the criteria. </p>
+          <p>While Canvas technically allows three submission attempts for the final project, this is NOT going to happen. Our grading team is trying to grade late submission as well as grade hundreds of final projects for all the sections of this class. They will be doing great to just get all final graded by the Tuesday after the semester ends. So… PLEASE make sure that you have checked and doubled checked your assignment to make sure it meets every requirement in the assignment checklist. You are unlikely to get a second submissions attempt. Please give me a thumbs up once you have read this notice. 👍</p>
         </div>
       </section> <!-- End of this section -->
 
