--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@ The goal is to learn to love learning so when you have no idea about what to do 
           <p>Even though this awesome WDD231 block class will close on <time class="date47a"></time> at midnight. You
             must have ALL your assignments submitted by <time class="date45b"></time> so the graders have time to grade
             before grades are due to the home office. <br>The most important submission is your finished Individual
-            Website Project.<br> If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date45c"></time> as well.<br>
+            Website Project.<br> If you have late submissions from unit 6, make sure to resubmit those before <time class="date45c"></time> as well.<br>
             Bro/SisterSmith</p>
         </div>
       </section> <!-- End of this section -->
