--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <div>
           <p><b>SUBJECT:</b> Week 1: Group Work</p>
           <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself
-            to your new group of friends.</p>
+            to your new group of friends here in Teams. First pick a team in Canvas then join that team here.</p>
           <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building
             your course portal home page. You could share your page link with the other members of your group. If you
             have any questions or want to show your work, please post below. 😎</p>
