--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <p>Post a message in Teams</p>
         <div>
           <p>Post a message about UCT.</p>
-          <p>SUBJECT: Universal Coordinated Time Offset <br>As a worldwide church, we are no longer using MT as the standard for due dates and team meetings. Instead, all due dates are now set to UCT. Please take a minute to find the offset from where you live. Assignments and team meetings could be EARLIER than listed time as much as 11 hours, or they could be later. 😁
+          <p>SUBJECT: Universal Coordinated Time Offset <br>As a worldwide church, we are no longer using MT as the standard for due dates and team meetings. Instead, all due dates are now set to UCT. Please take a minute to find the offset from where you live. Assignments and team meetings could be EARLIER than listed time as much as 11 hours, or they could be later. 😁 <br>Canvas and Teams do NOT convert meeting times to where you live. You have to translate the meeting time to your time so for most students the meeting time will be several hours earlier or later than the time listed in UTC.
             Please take responsibility for managing this time difference. This tool may be helpful. https://www.worldtimebuddy.com</p>
         </div>
       </section> <!-- End of this section -->
