--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
         <button class="wk2e"></button>
         <p>On <time class="date7d"></time> post this announcement to Teams</p>
         <div>
-          <p><b>SUBJECT:</b> Grid layout for Chamber of Commerce header</p>
-          <p>Last week you learned how to layout your header on small screens for a fixed sized logo, a variable width site name and a fixed sized hamburger button.<br>
+          <p><b>SUBJECT:</b> QUESTION: Grid layout for Chamber of Commerce header</p>
+          <p>Reflection Question<br>Last week you learned how to layout your header on small screens for a fixed sized logo, a variable width site name and a fixed sized hamburger button.<br>
             <strong>grid-template-columns: 24px auto 44px;</strong><br>            
             How would this code change if you are now adding a dark mode svg icon to the header just before the hamburger button?</p>
         </div>
