--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@
         <div>
           <p><b>SUBJECT:</b> Week 2: Looking forward to this module.</p>
           <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume.<br>
-            Remember that <strong>frameworks</strong> are not allowed in this course.<br>            
+            Remember that <strong>frameworks</strong> are not allowed in this course.<br>
+            You will each be creating your own "Chamber" site based on your home town. The purpose of the weekly teams meetings is to help each other out with challenges or questions you team mates may run into. It's great practice for working in a team in a real job. <br>      
             As you encounter questions on this weeks assignment or you would like to show your work for feedback, please post it here. 😀</p>
         </div>
       </section> <!-- End of this section -->
